action 분리