@@ -2,16 +2,26 @@ package com.semoss.agricola.GamePlay.domain.action;
 
 import com.fasterxml.jackson.annotation.*;
 import com.semoss.agricola.GamePlay.domain.History;
+import com.semoss.agricola.GamePlay.domain.action.implement.Action1;
+import com.semoss.agricola.GamePlay.domain.action.implement.Action20;
+import com.semoss.agricola.GamePlay.domain.action.implement.DefaultAction;
 import com.semoss.agricola.GamePlay.domain.card.Card;
+import com.semoss.agricola.GamePlay.domain.card.CardDictionary;
+import com.semoss.agricola.GamePlay.domain.card.MajorCard;
 import com.semoss.agricola.GamePlay.domain.gameboard.GameBoard;
 import com.semoss.agricola.GamePlay.domain.player.Player;
-import com.semoss.agricola.GamePlay.domain.resource.Reservation;
-import com.semoss.agricola.GamePlay.domain.resource.ResourceStruct;
-import com.semoss.agricola.GamePlay.domain.resource.ResourceType;
+import com.semoss.agricola.GamePlay.domain.resource.*;
 import com.semoss.agricola.GamePlay.dto.AgricolaActionRequest;
+import com.semoss.agricola.GamePlay.dto.BakeActionExtentionRequest;
+import com.semoss.agricola.GamePlay.dto.BuildActionExtentionRequest;
+import com.semoss.agricola.GamePlay.dto.CultivationActionExtentionRequest;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.Setter;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.config.ConfigurableBeanFactory;
+import org.springframework.context.annotation.Scope;
+import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -20,17 +30,13 @@ import java.util.Map;
 import java.util.stream.Collectors;
 
 @Getter
+@Component
+@Scope(ConfigurableBeanFactory.SCOPE_PROTOTYPE)
 public class Event {
-    @JsonIgnore
-    private GameBoard gameBoard;
-    private final EventName eventName;
-    private final List<Action> actions = new ArrayList<>();
-    private final List<DoType> actionDoType = new ArrayList<>();
-    private final List<ResourceStruct> stacks = new ArrayList<>(); // 누적 쌓인 자원
+    private final DefaultAction action;
+    private final List<ResourceStructInterface> stacks = new ArrayList<>(); // 누적 쌓인 자원
     private final List<Reservation> reservations = new ArrayList<>(); // 예약으로 쌓인 자원
 
-    @JsonIgnore
-    private int roundGroup;
     @Setter
     private int round;
 
@@ -40,16 +46,8 @@ public class Event {
     private Player isPlayed;
 
     @Builder
-    public Event(GameBoard gameBoard, int id, List<Action> actions, List<DoType> actionDoType, int roundGroup) {
-        this.gameBoard = gameBoard;
-        this.eventName = EventName.getEventNameById(id);
-        if(actions != null)
-            actions.stream()
-                    .forEach(this.actions::add);
-        if(actionDoType != null)
-            actionDoType.stream()
-                    .forEach(this.actionDoType::add);
-        this.roundGroup = roundGroup;
+    public Event(DefaultAction action) {
+        this.action = action;
         this.isPlayed = null;
     }
 
@@ -58,48 +56,29 @@ public class Event {
      * @param player 액션을 플레이하는 플레이어
      * @param acts 액션 수행관련 세부 사항
      */
-    public History runActions(Player player, List<AgricolaActionRequest.ActionFormat> acts) {
+    public History runActions(Player player, List<AgricolaActionRequest.ActionFormat> acts, CardDictionary cardDictionary) {
         // 이미 플레이된 상태인지 확인
         if(this.isPlayed != null)
             throw new RuntimeException("이미 플레이한 액션칸입니다.");
 
         this.isPlayed = player;
         History history = History.builder()
-                .eventName(this.eventName)
+                .eventName(this.action.getEventName())
                 .build();
 
-        // TODO: Object 입력 개선 (object acts.acts)
-        this.actions.stream()
-                .filter(action -> acts.get(actions.indexOf(action)).getUse())
-                .forEach(action -> {
-                    AgricolaActionRequest.ActionFormat act = acts.get(actions.indexOf(action));
-                    Integer times = 1; // TODO 액션 횟수 요청 정의 후 해당 값 바인딩
-                    switch (action.getActionType()) {
-                        case BASIC, STARTING, UPGRADE, ADOPT -> {
-                            ((SimpleAction) action).runAction(player, history);
-                        }
-                        case BAKE, BUILD, CULTIVATION -> {
-                            ((MultiInputAction) action).runAction(player, act.getActs());
-                        }
-                        case PLACE -> {
-                            Card card = gameBoard.getGame().getCardDictionary().getCard((Long) act.getActs());
-                            ((PlaceAction) action).runAction(player, card);
-                        }
-                        case STACK -> {
-                            player.addResource(this.stacks);
-                            history.writeResourceChange(this.stacks);
-                            this.stacks.clear();
-                        }
-                    }
-                    history.writeActionType(action.getActionType(), times);
-                });
+        this.action.runAction(player, acts, this.stacks, cardDictionary, history);
 
         return history;
     }
-
+    /**
+     * 스택 개수만큼 자원을 행동칸에 쌓는다.
+     * @param resource 쌓을 자원 스택
+     */
     public void stackResource(ResourceStruct resource){
         // 이미 쌓인 자원인 경우 찾아서 더하고, 없는 경우 새로 추가한다.
         stacks.stream()
+                .filter(ResourceStructInterface::isResource)
+                .map(resourceStructInterface -> (ResourceStruct) resourceStructInterface)
                 .filter(stack -> stack.getResource().equals(resource.getResource()))
                 .findFirst()
                 .ifPresentOrElse(
@@ -109,12 +88,29 @@ public class Event {
     }
 
     /**
+     * 스택 개수만큼 동물을 행동칸에 쌓는다.
+     * @param animal 쌓을 동물 스택
+     */
+    public void stackAnimal(AnimalStruct animal) {
+        // 이미 쌓인 가축인 경우 찾아서 더하고, 없는 경우 새로 추가한다.
+        stacks.stream()
+                .filter(ResourceStructInterface::isResource)
+                .map(resourceStructInterface -> (AnimalStruct) resourceStructInterface)
+                .filter(stack -> stack.getAnimal().equals(animal.getAnimal()))
+                .findFirst()
+                .ifPresentOrElse(
+                        stack -> stack.addResource(animal.getCount()),
+                        () -> stacks.add(animal)
+                );
+    }
+
+    /**
      * 예약 자원을 플레이어에게 전달하고 삭제한다.
      */
     public void deliverReservation() {
         List<Reservation> toRemove = reservations.stream()
                 .peek(Reservation::resolve)
-                .collect(Collectors.toList());
+                .toList();
         toRemove.forEach(reservations::remove);
     }
 
